--- a/formulaire.html
+++ b/formulaire.html
@@ -27,7 +27,7 @@
             <input type="text" id="name" name="item_name" required />
           </section>
           <section class="inner-container">
-            <label for="avatar">Choose a profile picture:</label>
+            <label for="avatar">Choisir une image:</label>
             <input type="file"
                    id="avatar" name="avatar"
                    accept="image/png, image/jpeg">
@@ -43,12 +43,12 @@
             </select>
           </section>
           <section class="inner-container">
-            <label for="presentation">Présentation</label>
-            <textarea id="presentation"></textarea>
+            <label for="description">Description</label>
+            <textarea id="description"></textarea>
           </section>
           <section class="inner-container">
-            <label for="name">Nom de l'objet :</label>
-            <input type="text" id="name" name="item_name" required />
+            <label for="lien">Lien :</label>
+            <input type="text" id="lien" name="lien-objet" required />
           </section>
           <section class="button-container">
             <button type="submit">Valider</button>
